fix templates | user 'user.username' instead of 'user.email'

--- a/django_rest_jwt_registration/templates/drjr_email_registration_confirm.html
+++ b/django_rest_jwt_registration/templates/drjr_email_registration_confirm.html
@@ -1,5 +1,5 @@
 <p>
-Dear <strong>{{ user.username }}</strong>,<br>
+Dear <strong>{{ user.email }}</strong>,<br>
 <br>
 Your registration has been confirmed.<br>
 <br>
