--- a/django_rest_jwt_registration/templates/drjr_email_reset_password_confirm.html
+++ b/django_rest_jwt_registration/templates/drjr_email_reset_password_confirm.html
@@ -1,5 +1,5 @@
 <p>
-Dear <strong>{{ user.username }}</strong>,<br>
+Dear <strong>{{ user.email }}</strong>,<br>
 <br>
 Your password has been reset as requested.<br>
 Your new password: <em>{{ new_password }}</em><br>
