--- a/templates/drjr_reset_password_confirm.html
+++ b/templates/drjr_reset_password_confirm.html
@@ -6,7 +6,7 @@ Password reset
 {% block content %}
 <h3>Default template overridden</h3>
 <p>
-Dear <strong>{{ user.username }}</strong>,<br>
+Dear <strong>{{ user.email }}</strong>,<br>
 <br>
 Your password has been reset as requested.<br>
 <br>
