--- a/django_rest_jwt_registration/templates/drjr_email_change_password.html
+++ b/django_rest_jwt_registration/templates/drjr_email_change_password.html
@@ -1,5 +1,5 @@
 <p>
-Dear <strong>{{ user.username }}</strong>,<br>
+Dear <strong>{{ user.email }}</strong>,<br>
 <br>
 Your password has been changed as requested.<br>
 <br>
