--- a/django_rest_jwt_registration/templates/drjr_email_registration_delete.html
+++ b/django_rest_jwt_registration/templates/drjr_email_registration_delete.html
@@ -1,5 +1,5 @@
 <p>
-Dear <strong>{{ user.username }}</strong>,<br>
+Dear <strong>{{ user.email }}</strong>,<br>
 <br>
 Click <a href="{{ confirm_url }}">here</a> to <strong>permanently</strong> delete your account.
 <br>
