--- a/django_rest_jwt_registration/templates/drjr_email_reset_password.html
+++ b/django_rest_jwt_registration/templates/drjr_email_reset_password.html
@@ -1,5 +1,5 @@
 <p>
-Dear <strong>{{ user.username }}</strong>,<br>
+Dear <strong>{{ user.email }}</strong>,<br>
 <br>
 Click <a href="{{ confirm_url }}">here</a> to reset your password.
 <br>
