--- a/django_rest_jwt_registration/templates/drjr_registration_delete_confirm.html
+++ b/django_rest_jwt_registration/templates/drjr_registration_delete_confirm.html
@@ -5,7 +5,7 @@ Account deleted
 {% endblock %}
 {% block content %}
 <p>
-Dear <strong>{{ user.username }}</strong>,<br>
+Dear <strong>{{ user.email }}</strong>,<br>
 <br>
 Your account has been removed as requested.<br>
 <br>
