--- a/templates/drjr_email_registration_delete.html
+++ b/templates/drjr_email_registration_delete.html
@@ -1,6 +1,6 @@
 <h3>Default template overridden</h3>
 <p>
-Dear <strong>{{ user.username }}</strong>,<br>
+Dear <strong>{{ user.email }}</strong>,<br>
 <br>
 Click <a href="{{ confirm_url }}">here</a> to <strong>permanently</strong> delete your account.
 <br>
