--- a/templates/drjr_registration_confirm.html
+++ b/templates/drjr_registration_confirm.html
@@ -6,7 +6,7 @@ Registration confirmed
 {% block content %}
 <h3>Default template overridden</h3>
 <p>
-Dear <strong>{{ user.username }}</strong>,<br>
+Dear <strong>{{ user.email }}</strong>,<br>
 <br>
 Your registration has been confirmed.<br>
 <br>
