--- a/templates/drjr_registration_delete_confirm.html
+++ b/templates/drjr_registration_delete_confirm.html
@@ -6,7 +6,7 @@ Account deleted
 {% block content %}
 <h3>Default template overridden</h3>
 <p>
-Dear <strong>{{ user.username }}</strong>,<br>
+Dear <strong>{{ user.email }}</strong>,<br>
 <br>
 Your account has been removed as requested.<br>
 <br>
