Revert "fix templates | user 'user.username' instead of 'user.email'"
This reverts commit 5c13b830f743ff461c4d2ccca7346917e096067c.

--- a/django_rest_jwt_registration/templates/drjr_email_registration_delete.html
+++ b/django_rest_jwt_registration/templates/drjr_email_registration_delete.html
@@ -1,5 +1,5 @@
 <p>
-Dear <strong>{{ user.email }}</strong>,<br>
+Dear <strong>{{ user.username }}</strong>,<br>
 <br>
 Click <a href="{{ confirm_url }}">here</a> to <strong>permanently</strong> delete your account.
 <br>
