--- a/django_rest_jwt_registration/templates/drjr_registration_confirm.html
+++ b/django_rest_jwt_registration/templates/drjr_registration_confirm.html
@@ -5,7 +5,7 @@ Registration confirmed
 {% endblock %}
 {% block content %}
 <p>
-Dear <strong>{{ user.email }}</strong>,<br>
+Dear <strong>{{ user.username }}</strong>,<br>
 <br>
 Your registration has been confirmed.<br>
 <br>
