--- a/django_rest_jwt_registration/templates/drjr_reset_password_confirm.html
+++ b/django_rest_jwt_registration/templates/drjr_reset_password_confirm.html
@@ -5,7 +5,7 @@ Password reset
 {% endblock %}
 {% block content %}
 <p>
-Dear <strong>{{ user.email }}</strong>,<br>
+Dear <strong>{{ user.username }}</strong>,<br>
 <br>
 Your password has been reset as requested.<br>
 <br>
