--- a/templates/drjr_email_change_password.html
+++ b/templates/drjr_email_change_password.html
@@ -1,6 +1,6 @@
 <h3>Default template overridden</h3>
 <p>
-Dear <strong>{{ user.email }}</strong>,<br>
+Dear <strong>{{ user.username }}</strong>,<br>
 <br>
 Your password has been changed as requested.<br>
 <br>
