--- a/templates/drjr_email_registration_delete_confirm.html
+++ b/templates/drjr_email_registration_delete_confirm.html
@@ -1,6 +1,6 @@
 <h3>Default template overridden</h3>
 <p>
-Dear <strong>{{ user.email }}</strong>,<br>
+Dear <strong>{{ user.username }}</strong>,<br>
 <br>
 Your account has been removed as requested.<br>
 <br>
