--- a/templates/drjr_email_reset_password_confirm.html
+++ b/templates/drjr_email_reset_password_confirm.html
@@ -1,6 +1,6 @@
 <h3>Default template overridden</h3>
 <p>
-Dear <strong>{{ user.email }}</strong>,<br>
+Dear <strong>{{ user.username }}</strong>,<br>
 <br>
 Your password has been reset as requested.<br>
 Your new password: <em>{{ new_password }}</em><br>
